# login-page-main.cpp

./: .gitignore  .replit  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  UI_PREVIEW.txt  auth_handler.cpp  auth_handler.h  backend_example.md  config.h  main.cpp  package.json  replit.md
docs/: SECURITY.md
include/: config.h  http_client.h
src/: auth_handler.cpp  http_client.cpp  main.cpp
web/: package-lock.json  package.json  server.js
web/public/: index.html
web/public/css/: style.css
web/public/js/: app.js
